Fix cbench log issues